--- a/Forms/styles.css
+++ b/Forms/styles.css
@@ -63,18 +63,18 @@ h1{
     border: none;
     outline: none;
     height: 40px;
-    background: black;
+    background: pink;
     border-radius: 40px;
 }
 .container input[type="submit"]:hover{
     cursor: pointer;
     background: palevioletred;
-    color:black;
+    color:pink;
 }
 .container input[type="reset"]:hover{
     cursor: pointer;
     background: palevioletred;
-    color:black;
+    color:white;
 }.container a{
     text-decoration: none;
      font-size: 16px;
